# chemlab-benchmark-green-agent

./: README.md  baseline_purple_agent.py  pyproject.toml
chembench/: __init__.py  evaluator.py  green_agent.py  references.py  rubric.py  tasks.py
data/: references.jsonl  tasks.jsonl
