[project]
name = "chemlab-benchmark-green-agent"
version = "0.1.0"
description = "ChemLab-Expert: Atrazine analytical chemistry research agent benchmark (Green Agent) for AgentX / AgentBeats Phase 1."
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
